filter finished + recipe page mark up
