# Back/src/routers/index.ts
@@ -4,6 +4,7 @@ import usersRouter from './users.ts';
 import categoriesRouter from './categories.ts';
 import ingredientsRouter from './ingredients.ts';
 import recipesRouter from './recipes.ts';
+import recipesPublicRouter from './recipesPublic.ts';
 
 const router = Router();
 
@@ -11,6 +12,7 @@ router.use('/auth', authRouter);
 router.use('/users', usersRouter);
 router.use('/categories', categoriesRouter);
 router.use('/ingredients', ingredientsRouter);
+router.use('/recipes/public', recipesPublicRouter);
 router.use('/recipes', recipesRouter);
 
 export default router;
